# english-chinese-mt-experiment

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
azure/: Dockerfile  README.md  bootstrap.py  compute.yaml  environment.yaml  job_template.yaml  sync_runs.py  wandb_connection.yaml  workspace.yaml
configs/: data.yaml  model.yaml  sweep_data_scale.yaml  training.yaml
data/: README.md
docs/: azure-setup.md  benchmarks.md
models/: README.md
scripts/: 01_download_data.py  02_prepare_data.py  03_train_tokenizer_extension.py  04_extend_model.py  05_create_subsets.py  06_train.py  07_evaluate.py  estimate_runtime.py  smoke_test_cpu.py  submit_aml_job.py
src/ecmt/: __init__.py
src/ecmt/data/: dedup.py  filters.py  formatting.py  loaders.py
src/ecmt/model/: load.py  tokenizer_extension.py
src/ecmt/training/: callbacks.py  eval.py  timings.py  trainer.py
src/ecmt/utils/: config.py  logging_setup.py
tests/: test_dedup.py  test_filters.py  test_formatting.py  test_timings.py  test_tokenizer_extension.py
